# sgraph

sgraph/: AUTHORS  Makefile.am  TODO  autogen.sh  config.h.in  configure.in  data.cpp  data.hh  defaults.hh  demodata.cpp  demodata.hh  dox.conf  draw.cpp  draw.hh  mandplot.c  options.cpp  options.hh  randfuncs.cpp  randfuncs.hh  rtdemo.cpp  sdldraw.cpp  sdldraw.hh  sgraph.1  sgraph.cpp  view.cpp  view.hh
sgraph/doc/: index.html  style.css
